--- a/Index.html
+++ b/Index.html
@@ -98,29 +98,28 @@
         scelerisque dignissim cursus auctor.</span
       >
       <div>
-        <ul>
-          <li>
-            <img src="../Images/Festivalis/Galerija/Rectangle 8 (1).png" />
-          </li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 9.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 10.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 11.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 12.png" /></li>
-        </ul>
-        <ul>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 13.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 14.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 15.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 16.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 17.png" /></li>
-        </ul>
-        <ul>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 18.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 19.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 20.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 21.png" /></li>
-          <li><img src="../Images/Festivalis/Galerija/Rectangle 22.png" /></li>
-        </ul>
+        <div>
+          <img src="../Images/Festivalis/Galerija/Rectangle 8 (1).png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 9.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 10.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 11.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 12.png" />
+        </div>
+        <div>
+          <img src="../Images/Festivalis/Galerija/Rectangle 13.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 14.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 15.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 16.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 17.png" />
+        </div>
+
+        <div>
+          <img src="../Images/Festivalis/Galerija/Rectangle 18.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 19.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 20.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 21.png" />
+          <img src="../Images/Festivalis/Galerija/Rectangle 22.png" />
+        </div>
       </div>
     </div>
     <div id="tickets">
@@ -170,9 +169,6 @@
         convallis facilisi ac vitae facilisi sit nisl, diam</span
       >
       <iframe
-        width="1200"
-        height="450"
-        style="border: 0"
         loading="lazy"
         allowfullscreen
         referrerpolicy="no-referrer-when-downgrade"
